# Krisp-SDK-Sample-Apps

./: .gitignore  makefile
cmake/: CMakeLists.txt  blas.cmake  krisp.cmake
src/sample-frame-resize/: main.cpp
src/sample-nc/: main.cpp
src/sample-sdk-extension/: blocklist.txt  bvc_device_manager.cpp  bvc_device_manager.h  device_list.cpp  device_list.h  main.cpp  model.cpp  model.h  model_container.h  outbound_session_factory.cpp  outbound_session_factory.h  sample.cpp  sdk_extension.h  session.h  session_factory.cpp  session_factory.h  session_nc.cpp  session_nc.h  unit_test_device_list.h
src/sdk-extension/: bvc_device_manager.cpp  bvc_device_manager.h  device_list.cpp  device_list.h  frame_cleaner.cpp  frame_cleaner.h  frame_processor.h  frame_processor_factory.cpp  frame_processor_factory.h  helper.cpp  helpers.h  library_resources.cpp  mic_frame_cleaner_factory.cpp  mic_frame_cleaner_factory.h  model.cpp  model.h  model_container.h  model_container_impl.h  outbound_session_factory.cpp  outbound_session_factory.h  session.h  session_factory.cpp  session_factory.h  session_nc.cpp  session_nc.h  speaker_frame_cleaner_factory.cpp  speaker_frame_cleaner_factory.h
src/sdk-extension-test/: unit_test_device_list.cpp
src/sdk-extension-test/data/device-lists/: allowlist.txt  badlist.txt  blocklist.txt
src/sdk-extension-test/data/models/: model-bvc-32k.kw  model-nc-16k.kw  model-nc-32k.kw  model-nc-8k.kw
src/sdk-extension/include/: audio-processor.h  krisp-audio-processor.h  krisp-audio-sdk-ext.h  krisp-enums.h  krisp-exception.h  krisp-voice-sdk.h
src/sdk-extension/internal/: audio_cleaner.cpp  audio_cleaner.h  audio_processor_builder.cpp  audio_processor_builder.h  bvc_device_manager.cpp  bvc_device_manager.h  device_list.cpp  device_list.h  krisp_audio_sdk_ext.cpp  krisp_voice_sdk.cpp  library_resources.cpp  library_resources.h  model.cpp  model.h  model_container.h  model_container_impl.h  model_scanner.cpp  model_scanner.h
src/utils/: argument_parser.cpp
